Fix buttons in planners to nowrap

--- a/components/planners/planner-nav/PlannerHeader.module.scss
+++ b/components/planners/planner-nav/PlannerHeader.module.scss
@@ -110,6 +110,7 @@ $dropdown-bp: 675px;
     }
 
     .btn {
+        white-space: nowrap !important;
         border-radius: 23px;
     }
 }
